# Butterfly_designer

./: .dockerignore  .gitignore  Dockerfile  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
butterfly_designer/: .dockerignore  docker-compose.yml  pyproject.toml
butterfly_designer/butterfly_landing_page/: admin.py  apps.py  models.py  urls.py  views.py
butterfly_designer/butterfly_landing_page/migrations/: 0001_initial.py  0006_alter_items_price.py
butterfly_designer/core/: settings.py  urls.py
butterfly_designer/static/js/: main.js
butterfly_designer/templates/: home.html  review_form.html
butterfly_landing_page/: models.py  qr_generator.py  urls.py
butterfly_landing_page/migrations/: 0002_about.py  0003_employee.py  0004_alter_employee_image.py  0005_customerreview.py  0007_about_facebook_about_instagram_about_twitter.py  0008_customerreview_created_at_employee_created_at_and_more.py  0009_about_image_alter_employee_image_alter_items_image.py
core/: settings.py
static/css/: style.css
static/js/: main.js
templates/: employee_detail.html  home.html
