[project]
name = "butterfly-designer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.9",
    "cookiecutter>=2.7.1",
    "dj-database-url>=3.1.2",
    "django>=5.2.14",
    "django-environ>=0.13.0",
    "django-storages>=1.14.6",
    "django-tailwind>=4.4.2",
    "dotenv>=0.9.9",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "qrcode>=8.2",
    "whitenoise>=6.12.0",
]
