[project]
name = "butterfly-designer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.7.1",
    "dj-database-url>=3.1.2",
    "django>=5.2.14",
    "django-environ>=0.13.0",
    "django-tailwind>=4.4.2",
    "dotenv>=0.9.9",
    "pillow>=12.2.0",
    "psycopg2>=2.9.12",
]
